# WEB_HW13

FAST_API/app/: Dockerfile  alembic.ini  docker-compose.yml  main.py  my_file.py  pyproject.toml  requirements.txt
FAST_API/app/alembic/: env.py
FAST_API/app/alembic/versions/: 00c7169cac3a_add_avatar_column_to_clients_table.py  0d6dd8b10436_added_confirmed_column_to_clients_table.py
FAST_API/app/api/: auth_routes.py  users_routes.py
FAST_API/app/conf/: config.py
FAST_API/app/dependencies/: db.py
FAST_API/app/models/: base.py  client.py  user.py
FAST_API/app/postgres-data/base/1/: pg_internal.init
FAST_API/app/postgres-data/base/16384/: 1247  1249  1259  16389  16399  16406  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
FAST_API/app/postgres-data/base/5/: pg_internal.init
FAST_API/app/postgres-data/global/: 1260  1262  pg_control  pg_internal.init
FAST_API/app/postgres-data/pg_stat/: pgstat.stat
FAST_API/app/repository/: auth.py  users.py
FAST_API/app/schemas/: client.py  user.py
FAST_API/app/services/: auth.py  users.py  verification_email.py
FAST_API/app/services/templates/: verification_email_template.html
FAST_API/postgres-data/: postmaster.pid
FAST_API/postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
FAST_API/postgres-data/base/16384/: 1247  1249  1259  16385  16392  16395  16402  2224  2579  2604  2606  2608  2610  (+19 more)
FAST_API/postgres-data/global/: 1260  2671  pg_control  pg_internal.init
(+1 files in other folders)
